@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0xD1,0xA7,0x39,0x62,0x2D,0xC5,0xE3,0xC4,0x37,0x3F,0x49,0x4E,
-		0x62,0x78,0x26,0x77,0x31,0xE0,0x60,0x2C,0xA5,0x91,0x93,0x6C,
-		0x8E,0x17,0xA5,0x80,0x08,0xDE,0x19,0x5C,0x67,0x86,0xE9,0xD1,
-		0x10,0x61,0xA2,0xA2,0xF2,0xCF,0xC9,0xDA,0x85,0x70,0xE5,0x64,
-		0xEF,0xB1,0xB7,0x03,0x54,0x92,0x50,0xEA,0x3D,0x6D,0x17,0xFE,
-		0x4D,0x60,0x6A,0x8B,
+		0xAE,0x63,0x22,0x35,0x42,0xB6,0xE3,0x9D,0x7E,0x19,0x82,0x86,
+		0x4E,0x35,0x2E,0xB6,0xC6,0xCB,0xEE,0x31,0x12,0xC7,0x65,0xB1,
+		0x2E,0xFD,0x0D,0x5D,0x2E,0xED,0x68,0xF8,0x8F,0x34,0xFB,0x00,
+		0x78,0x12,0xCA,0x21,0x18,0x04,0x5F,0x27,0x25,0x29,0x9D,0x30,
+		0x44,0xF1,0xD4,0xC1,0x2F,0x69,0x51,0x40,0xB1,0x0C,0x09,0xA8,
+		0x3C,0x41,0x5C,0x73,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
