@@ -1,0 +1,85 @@
+#! /bin/sh
+# Copyright (c) 1996-2002 SuSE GmbH Nuernberg, Germany.  All rights reserved.
+# Modifications for NRPE Copyright (c) 2003 Subhendu Ghosh
+# Author: Christopher Mahmood <ckm+snmp@suse.de>, Remo Behn <ray+snmp@suse.de>
+# Modifications for NRPE: Subhendu Ghosh <sghosh@users.sourceforge.net>
+#
+# /etc/init.d/nrpe
+#
+### BEGIN INIT INFO
+# Provides:            nrpe
+# Required-Start:      $network
+# Required-Stop:
+# Default-Start:       2 3 5
+# Default-Stop:        0 1 6
+# Description:         start nrpe
+### END INIT INFO
+
+NRPEBIN=@bindir@/nrpe
+NRPECFG=@sysconfdir@/nrpe.cfg
+
+test -x $NRPEBIN || exit 5
+
+# Shell functions sourced from /etc/rc.status:
+#      rc_check         check and set local and overall rc status
+#      rc_status        check and set local and overall rc status
+#      rc_status -v     ditto but be verbose in local rc status
+#      rc_status -v -r  ditto and clear the local rc status
+#      rc_failed        set local and overall rc status to failed
+#      rc_failed <num>  set local and overall rc status to <num><num>
+#      rc_reset         clear local rc status (overall remains)
+#      rc_exit          exit appropriate to overall rc status
+. /etc/rc.status
+
+# First reset status of this service
+rc_reset
+
+# Return values acc. to LSB for all commands but status:
+# 0 - success
+# 1 - generic or unspecified error
+# 2 - invalid or excess argument(s)
+# 3 - unimplemented feature (e.g. "reload")
+# 4 - insufficient privilege
+# 5 - program is not installed
+# 6 - program is not configured
+# 7 - program is not running
+# 
+# Note that starting an already running service, stopping
+# or restarting a not-running service as well as the restart
+# with force-reload (in case signalling is not supported) are
+# considered a success.
+
+
+case "$1" in
+    start)
+	echo -n "Starting nrpe:"
+	startproc $NRPEBIN -c $NRPECFG -d
+	rc_status -v
+	rc_reset
+
+	;;
+    stop)
+	echo -n "Shutting down nrpe:"
+	killproc -TERM $NRPEBIN
+	rc_status -v ; rc_reset
+
+	;;
+    restart)
+	$0 stop
+	$0 start
+	rc_status
+	;;
+    status)
+	echo -n "Checking for service nrpe:"
+	checkproc $NRPEBIN
+	rc_status -v
+	rc_reset
+
+	;;
+    *)
+	echo "Usage: $0 {start|stop|restart|status}"
+	exit 1
+	;;
+esac
+rc_exit
+
