@@ -9,6 +9,7 @@ NRPE Changelog
 - Removed length restrictions for command names and command lines
 - Configure script patch for getopt_long on Solaris
 - Bug fixes for accept() on HP-UX 11.0
+- Init script for SUSE Linux (Subhendu Ghosh)
 
 
 2.0 - 09/08/2003
